--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "spatie/laravel-image-optimizer": "^1.8",
         "spatie/laravel-medialibrary": "^11.0",
         "spatie/laravel-permission": "^6.7",
+        "spatie/laravel-sitemap": "^7.3",
         "tightenco/ziggy": "^2.0",
         "unisharp/laravel-filemanager": "^2.9"
     },
